--- a/browser-extentions/google-chrome/front/options/options.html
+++ b/browser-extentions/google-chrome/front/options/options.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>App</title>
+    <title>Title</title>
 </head>
 <body>
-App
+Options page
 </body>
 </html>
